<resources>
    <string name="app_name">IdolFace</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_idols">Idols</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string name="tfe_ic_gender" translatable="false">Gender:</string>
    <string-array name="tfe_ic_genders" translatable="false">
        <item>TOTAL</item>
        <item>MALE</item>
        <item>FEMALE</item>
    </string-array>
    <string name="channel">Channel</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="myprofile">My Profile</string>
    <string name="signin">Sign in</string>
    <string name="signout">Sign out</string>
    <string name="open_with">Open with</string>
    <string name="inference_time">Inference Time</string>
    <string name="no_app_to_open_intent">No app on your device can open this</string>
    <string name="share_dialog_title">Share with</string>
    <string name="permission_denied">Action denied by the system</string>
    <string name="msg_copied">Copied to clipboard</string>
    <string name="share_subject">%1$s for learning language</string>
    <string name="share_message">Hello. With %1$s,you can find the Idols that resemble you. Please use this app: https://play.google.com/store/apps/details?id=%2$s</string>
    <string name="app_update_notification_channel_id" translatable="false">IdolFaceAppUpdate</string>
    <string name="app_update_notification_content_title">IdolFace update is available!</string>
    <string name="updates_setting_title">Updates</string>
    <string name="txt_select_an_idol">Select an Idol</string>
    <string name="txt_idol_gallery">Idol Gallery</string>
    <string name="photos">Photos: %1$d</string>
    <string name="slogan">A.I. IdolFace</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_will_send_otp">We will send you an <b> One Time Password </b>to this mobile number</string>
    <string name="txt_enter_mob_no">Enter Mobile Number</string>
    <string name="txt_enter_otp">Enter the OTP sent to </string>
    <string name="txt_get_otp">Get otp</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_otp_verification">OTP Verification</string>
    <string name="txt_dont_receive">Don\'t receive the OTP?</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_name">Name</string>
    <string name="txt_oldname">Old Name</string>
    <string name="txt_body_profile">Body Profile (ex:180cm, 75kg)</string>
    <string name="txt_group_name">Group Name</string>
    <string name="txt_company">Company</string>
    <string name="txt_user_gender">Gender</string>
    <string name="txt_pic_name_desc">This user name and picture will be visible to your IdolFace users. Other users can find you by searching.</string>
    <string name="err_no_net">No Internet Connection</string>
    <string name="txt_search">Search</string>
    <string name="txt_want_2_logout">Do you want to logout?</string>
    <string name="txt_alert_msg">No worries,when you login again,Your messages will be recovered automatically</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_job_class">Singer, Actor/Actress etc</string>
    <string name="txt_about">About...</string>
    <string name="txt_u_name">User name</string>
    <string name="txt_your_status">Status</string>
    <string name="txt_mob_num">Mobile number</string>
    <string name="txt_log_out">LogOut</string>
    <string name="txt_save_changes">Save changes</string>
    <string name="txt_select_a_option">Select a option</string>
    <string name="take_photo">Take Photo</string>
    <string name="txt_gallery">Open Gallery</string>
    <string name="txt_file_p_error">Permission Denied. Please enable permission!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="picture_count">Pictures: %1$s</string>
    <string name="pick_birthdate">Pick birthdate</string>
    <string name="wanna_correct">Want to correct?</string>
    <string name="no_face">No Face</string>
    <string name="title_activity_about">About IdolFace</string>
    <string name="tab_about">About</string>
    <string name="tab_contributors">Contributors</string>
    <string name="tab_licenses">Licenses</string>
    <string name="github_url" translatable="false">https://github.com/tuxxon/IdolFace</string>
    <string name="donation_url" translatable="false">https://touchizen.com/donate</string>
    <string name="website_url" translatable="false">https://touchizen.com/</string>
    <string name="privacy_policy_url" translatable="false">https://touchizen.com/privacy</string>
    <string name="copyright">© %1$s by %2$s under %3$s</string>
    <string name="finish">OK</string>
    <string name="action_open_website">Open website</string>
    <string name="read_full_license">Read license</string>
    <string name="read_member_license">Read license for member</string>
    <string name="agree_member_license">Agree this license</string>
    <string name="app_description">Find idol face resemblance</string>
    <string name="contribution_title">Contribute</string>
    <string name="contribution_encouragement">Whether you have ideas of; translation, design changes, code cleaning, or real heavy code changes—help is always welcome. The more is done the better it gets!</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="donation_title">Donate</string>
    <string name="donation_encouragement">IdolFace is developed by volunteers spending their free time bringing you the best user experience. Give back to help developers make IdolFace even better while they enjoy a cup of coffee.</string>
    <string name="give_back">Give back</string>
    <string name="website_title">Website</string>
    <string name="website_encouragement">Visit the Touchizen.com\/idolface Website for more info and news.</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="privacy_policy_title">IdolFace\'s Privacy Policy</string>
    <string name="privacy_policy_encouragement">The IdolFace project takes your privacy very seriously. Therefore, the app does not collect any data without your consent.\nIdolFace\'s privacy policy explains in detail what data is sent and stored when you send a crash report.</string>
    <string name="read_privacy_policy">Read privacy policy</string>
    <string name="app_license_title">IdolFace\'s License</string>
    <string name="app_license">IdolFace is copyleft libre software: You can use, study share and improve it at will. Specifically you can redistribute and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="member_license_title">IdolFace\'s License for members</string>
    <string name="member_license">When you sign up as a member, you will use member services. Each member is responsible for copyright related matters.</string>
    <string name="title_licenses">Third-party Licenses</string>
    <string name="add_new_idol">Or, please a new idol for A.I. to learn</string>
    <string name="add_new_pictures">Please the new photos for idol for accuracy</string>
    <string name="new_idol_displayed">A new idol will be displayed after approval.</string>
    <string name="add_idols_n_pictures">Please post the idol\'s pictures.\nThe more pictures of idol-face,\nthe better IdolFace will be.</string>
    <string name="pref_screen_title_still_image" translatable="false">IdolFace Settings</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks" translatable="false">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks" translatable="false">2</string>
    <string name="pref_title_face_detector_contour_mode" translatable="false">Contour mode</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours" translatable="false">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours" translatable="false">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours" translatable="false">2</string>
    <string name="pref_title_face_detector_classification_mode" translatable="false">Classification mode</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications" translatable="false">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications" translatable="false">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications" translatable="false">2</string>
    <string name="pref_title_face_detector_performance_mode" translatable="false">Performance mode</string>
    <string name="pref_entries_face_detector_performance_mode_fast" translatable="false">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate" translatable="false">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast" translatable="false">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate" translatable="false">2</string>
    <string name="pref_title_face_detector_face_tracking" translatable="false">Face tracking</string>
    <string name="pref_title_face_detector_min_face_size" translatable="false">Minimum face size</string>
    <string name="pref_dialog_message_face_detector_min_face_size" translatable="false">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
</resources>